--- a/scope_parser/scope_parser.ipynb
+++ b/scope_parser/scope_parser.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:06:41.421744Z",
-     "start_time": "2020-10-05T14:06:40.476670Z"
+     "end_time": "2020-10-05T19:57:27.225493Z",
+     "start_time": "2020-10-05T19:57:26.461407Z"
     },
     "scrolled": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:06:42.205527Z",
-     "start_time": "2020-10-05T14:06:42.175744Z"
+     "end_time": "2020-10-05T19:57:27.250375Z",
+     "start_time": "2020-10-05T19:57:27.227609Z"
     },
     "scrolled": false
    },
@@ -122,17 +122,20 @@
        "2   Debka File  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# read the csv \"test_demo.csv\" can be replace with any other filename you want to input\n",
+    "# read the csv \"test_demo.csv\" can be replace with\n",
+    "# any other filename you want to input\n",
     "df = pd.read_csv(\"test_demo.csv\")\n",
     "\n",
-    "# create a new column named \"UniqueID\" from 1,2,3,4,5,...to n(n is # of rows we have)\n",
-    "# UniqueID is using to link the Source and Associate Twitter Handle, which should create by system\n",
+    "# create a new column named \"UniqueID\" from \n",
+    "# 1,2,3,4,5,...to n(n is # of rows we have)\n",
+    "# UniqueID is using to link the Source and Associate Twitter Handle,\n",
+    "# which should create by system\n",
     "# usually it is used by system only\n",
     "df.insert(0, \"UniqueID\", range(1, len(df) + 1), True)\n",
     "\n",
@@ -145,44 +148,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-01T14:23:25.363023Z",
-     "start_time": "2020-10-01T14:23:25.360604Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "#### this is old input file so just ignore it####\n",
-    "\n",
-    "# deal with \"Other language version\" first\n",
-    "# identify rows where \"Other language version\" is not null\n",
-    "#not_null = df.loc[pd.notna(df[\"Associated Publisher\"]), :].index\n",
-    "\n",
-    "\n",
-    "# create a new dataframe with the values that We requested,\n",
-    "# based on the index rows found above.\n",
-    "# new_df_to_add = pd.DataFrame({'UniqueID':df.iloc[not_null,0],\n",
-    "#                               'Source': df.iloc[not_null,9],\n",
-    "#                               \"RSS feed URLs (where available)\":np.nan,\n",
-    "#                               'Type': \"News Source\",\n",
-    "#                               'Tags': df.iloc[not_null,4],\n",
-    "#                               'Location':df.iloc[not_null,5],\n",
-    "#                               'Associated Twitter Handle': np.nan,\n",
-    "#                               'Name':df.iloc[not_null,7],\n",
-    "#                               'Text aliases': np.nan,\n",
-    "#                               'Associated Publisher': np.nan}) \n",
-    "\n",
-    "# new_df_to_add"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-05T14:06:47.651266Z",
-     "start_time": "2020-10-05T14:06:47.623123Z"
+     "end_time": "2020-10-05T19:57:27.277257Z",
+     "start_time": "2020-10-05T19:57:27.252908Z"
     }
    },
    "outputs": [
@@ -276,42 +243,46 @@
        "2                   NaN  Debka File - English           NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# to find every non-empty Associate Twitter Handle's rows's index and store into not_null_twitter \n",
-    "# for example if row 0 exist associate twitter handle, then it will be stored in not_null_twitter \n",
+    "# to find every non-empty Associate Twitter Handle's rows's index\n",
+    "# and store into not_null_twitter \n",
+    "# for example if row 0 exist associate twitter handle, \n",
+    "# then it will be stored in not_null_twitter \n",
     "not_null_twitter = df.loc[pd.notna(df[\"Associated Twitter Handle\"]), :].index\n",
     "\n",
-    "# create new rows for every Associate Twitter Handle, in this case source will be the old assciated twitter handle\n",
+    "# create new rows for every Associate Twitter Handle, \n",
+    "# in this case source will be the old assciated twitter handle\n",
     "# Type to be \"Twitter Handle\", UniqueID, Tags and Name will keep same.\n",
-    "new_df_to_add_twitter = pd.DataFrame({'UniqueID':df.iloc[not_null_twitter,0],\n",
-    "                              'Source': df.iloc[not_null_twitter,5],\n",
-    "                              \"RSS feed URLs (where available)\":np.nan,\n",
-    "                              'Type': \"Twitter Handle\",\n",
-    "                              'Tags': df.iloc[not_null_twitter,4],\n",
+    "new_df_to_add_twitter = pd.DataFrame({'UniqueID': df.iloc[not_null_twitter, 0],  # nopep8\n",
+    "                              'Source': df.iloc[not_null_twitter,5],  # nopep8\n",
+    "                              \"RSS feed URLs (where available)\":np.nan,  # nopep8\n",
+    "                              'Type': \"Twitter Handle\",  # nopep8\n",
+    "                              'Tags': df.iloc[not_null_twitter, 4],  # nopep8\n",
     "                              'Associated Twitter Handle': np.nan,\n",
-    "                              'Associated Publisher': np.nan,\n",
-    "                              'Name':df.iloc[not_null_twitter,7],        \n",
+    "                              'Associated Publisher': np.nan,  # nopep8\n",
+    "                              'Name': df.iloc[not_null_twitter, 7],  # nopep8        \n",
     "                              'Text aliases': np.nan})\n",
     "\n",
-    "# since some of associated twitter Handle will be 2 or 3, so it use \"|\" to split\n",
+    "# since some of associated twitter Handle will be 2 or 3,\n",
+    "# so it use \"|\" to split\n",
     "# and make every twitter handle as a new record\n",
-    "new_df_to_add_twitter[\"Source\"] = new_df_to_add_twitter[\"Source\"].str.split(\"|\")\n",
+    "new_df_to_add_twitter[\"Source\"] = new_df_to_add_twitter[\"Source\"].str.split(\"|\")  # nopep8\n",
     "new_df_to_add_twitter = new_df_to_add_twitter.explode(\"Source\")\n",
     "new_df_to_add_twitter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:06:50.160366Z",
-     "start_time": "2020-10-05T14:06:50.141712Z"
+     "end_time": "2020-10-05T19:57:27.298015Z",
+     "start_time": "2020-10-05T19:57:27.279701Z"
     }
    },
    "outputs": [
@@ -458,7 +429,7 @@
        "2          NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:12:53.472148Z",
-     "start_time": "2020-10-05T14:12:53.441989Z"
+     "end_time": "2020-10-05T19:57:27.315309Z",
+     "start_time": "2020-10-05T19:57:27.300246Z"
     }
    },
    "outputs": [
@@ -555,23 +526,23 @@
        "2           Debka File  Debka File - English   Debka File  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = [x for _,x in df.groupby('Type')]\n",
-    "l[0]"
+    "Object = [x for _,x in df.groupby('Type')]\n",
+    "Object[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:15:36.437317Z",
-     "start_time": "2020-10-05T14:15:36.423600Z"
+     "end_time": "2020-10-05T19:57:27.331367Z",
+     "start_time": "2020-10-05T19:57:27.317636Z"
     }
    },
    "outputs": [
@@ -680,22 +651,22 @@
        "2                  NaN  Debka File - English          NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l[1]"
+    "Object[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T14:23:49.652315Z",
-     "start_time": "2020-10-05T14:23:49.634192Z"
+     "end_time": "2020-10-05T19:57:27.344279Z",
+     "start_time": "2020-10-05T19:57:27.333711Z"
     },
     "scrolled": true
    },
@@ -753,49 +724,37 @@
    ],
    "source": [
     "print('l1')\n",
-    "print(l[1].iloc[0,])\n",
+    "print(Object[1].iloc[0, ])\n",
     "print('l2')\n",
-    "print(l[1].iloc[1,])\n",
+    "print(Object[1].iloc[1, ])\n",
     "print('l3')\n",
-    "print(l[1].iloc[2,])\n",
+    "print(Object[1].iloc[2, ])\n",
     "print('l4')\n",
-    "print(l[1].iloc[3,])\n",
+    "print(Object[1].iloc[3, ])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T15:17:45.006644Z",
-     "start_time": "2020-10-05T15:17:44.985069Z"
+     "end_time": "2020-10-05T19:57:27.359231Z",
+     "start_time": "2020-10-05T19:57:27.348684Z"
     }
    },
    "outputs": [],
    "source": [
     "def get_twitter_csv(file1):\n",
     "    file1.to_csv('twitter.csv', index=False)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def get_domain_csv(file0):\n",
     "    file0.to_csv('domain.csv', index=False)\n",
-    "    \n",
-    "get_twitter_csv(l[1])\n",
-    "get_twitter_csv(l[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-23T20:59:10.854035Z",
-     "start_time": "2020-09-23T20:59:10.818828Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n"
+    "\n",
+    "\n",
+    "get_twitter_csv(Object[1])\n",
+    "get_twitter_csv(Object[0])"
    ]
   }
  ],
