make index in order ie 0,1,2,3,4,5,6....)
'

--- a/scope_parser/scope_parser.ipynb
+++ b/scope_parser/scope_parser.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.225493Z",
-     "start_time": "2020-10-05T19:57:26.461407Z"
+     "end_time": "2020-10-06T16:31:01.905407Z",
+     "start_time": "2020-10-06T16:31:01.071750Z"
     },
     "scrolled": true
    },
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.250375Z",
-     "start_time": "2020-10-05T19:57:27.227609Z"
+     "end_time": "2020-10-06T16:31:01.927306Z",
+     "start_time": "2020-10-06T16:31:01.906991Z"
     },
     "scrolled": false
    },
@@ -148,8 +148,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.277257Z",
-     "start_time": "2020-10-05T19:57:27.252908Z"
+     "end_time": "2020-10-06T16:31:01.954081Z",
+     "start_time": "2020-10-06T16:31:01.930416Z"
     }
    },
    "outputs": [
@@ -281,8 +281,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.298015Z",
-     "start_time": "2020-10-05T19:57:27.279701Z"
+     "end_time": "2020-10-06T16:31:01.977296Z",
+     "start_time": "2020-10-06T16:31:01.956884Z"
     }
    },
    "outputs": [
@@ -344,7 +344,7 @@
        "      <td>Calcalist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>@calcalist</td>\n",
        "      <td>NaN</td>\n",
@@ -356,7 +356,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>https://www.debka.com/</td>\n",
        "      <td>NaN</td>\n",
@@ -368,7 +368,7 @@
        "      <td>Debka File</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>@debkafile</td>\n",
        "      <td>NaN</td>\n",
@@ -380,7 +380,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>@debka_english</td>\n",
        "      <td>NaN</td>\n",
@@ -399,34 +399,34 @@
        "   UniqueID                   Source  RSS feed URLs (where available)  \\\n",
        "0         1              @Marianhouk                              NaN   \n",
        "1         2  http://calcalist.co.il/                              NaN   \n",
-       "1         2               @calcalist                              NaN   \n",
-       "2         3   https://www.debka.com/                              NaN   \n",
-       "2         3               @debkafile                              NaN   \n",
-       "2         3           @debka_english                              NaN   \n",
+       "2         2               @calcalist                              NaN   \n",
+       "3         3   https://www.debka.com/                              NaN   \n",
+       "4         3               @debkafile                              NaN   \n",
+       "5         3           @debka_english                              NaN   \n",
        "\n",
        "             Type                              Tags  \\\n",
        "0  Twitter Handle               Twitter Journalists   \n",
        "1     News Source          Israeli|Hebrew|Financial   \n",
-       "1  Twitter Handle          Israeli|Hebrew|Financial   \n",
-       "2     News Source  Israeli|English|Hawkish|Security   \n",
-       "2  Twitter Handle  Israeli|English|Hawkish|Security   \n",
-       "2  Twitter Handle  Israeli|English|Hawkish|Security   \n",
+       "2  Twitter Handle          Israeli|Hebrew|Financial   \n",
+       "3     News Source  Israeli|English|Hawkish|Security   \n",
+       "4  Twitter Handle  Israeli|English|Hawkish|Security   \n",
+       "5  Twitter Handle  Israeli|English|Hawkish|Security   \n",
        "\n",
        "   Associated Twitter Handle Associated Publisher                  Name  \\\n",
        "0                        NaN                  NaN           Marian Houk   \n",
        "1                 @calcalist               Yediot             Calcalist   \n",
-       "1                        NaN                  NaN             Calcalist   \n",
-       "2  @debkafile|@debka_english           Debka File  Debka File - English   \n",
-       "2                        NaN                  NaN  Debka File - English   \n",
-       "2                        NaN                  NaN  Debka File - English   \n",
+       "2                        NaN                  NaN             Calcalist   \n",
+       "3  @debkafile|@debka_english           Debka File  Debka File - English   \n",
+       "4                        NaN                  NaN  Debka File - English   \n",
+       "5                        NaN                  NaN  Debka File - English   \n",
        "\n",
        "  Text aliases  \n",
        "0  Marian Houk  \n",
        "1    Calcalist  \n",
-       "1          NaN  \n",
-       "2   Debka File  \n",
        "2          NaN  \n",
-       "2          NaN  "
+       "3   Debka File  \n",
+       "4          NaN  \n",
+       "5          NaN  "
       ]
      },
      "execution_count": 4,
@@ -438,6 +438,8 @@
     "# add the new rows into the origin dataframe and sorted by UniqueID\n",
     "df = df.append(new_df_to_add_twitter)\n",
     "df = df.sort_values(by=['UniqueID'])\n",
+    "df = df.reset_index()\n",
+    "df.drop(['index'], axis=1, inplace=True)\n",
     "df"
    ]
   },
@@ -446,8 +448,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.315309Z",
-     "start_time": "2020-10-05T19:57:27.300246Z"
+     "end_time": "2020-10-06T16:31:01.997376Z",
+     "start_time": "2020-10-06T16:31:01.980146Z"
     }
    },
    "outputs": [
@@ -497,7 +499,7 @@
        "      <td>Calcalist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>https://www.debka.com/</td>\n",
        "      <td>NaN</td>\n",
@@ -515,15 +517,15 @@
       "text/plain": [
        "   UniqueID                   Source  RSS feed URLs (where available)  \\\n",
        "1         2  http://calcalist.co.il/                              NaN   \n",
-       "2         3   https://www.debka.com/                              NaN   \n",
+       "3         3   https://www.debka.com/                              NaN   \n",
        "\n",
        "          Type                              Tags  Associated Twitter Handle  \\\n",
        "1  News Source          Israeli|Hebrew|Financial                 @calcalist   \n",
-       "2  News Source  Israeli|English|Hawkish|Security  @debkafile|@debka_english   \n",
+       "3  News Source  Israeli|English|Hawkish|Security  @debkafile|@debka_english   \n",
        "\n",
        "  Associated Publisher                  Name Text aliases  \n",
        "1               Yediot             Calcalist    Calcalist  \n",
-       "2           Debka File  Debka File - English   Debka File  "
+       "3           Debka File  Debka File - English   Debka File  "
       ]
      },
      "execution_count": 5,
@@ -541,8 +543,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.331367Z",
-     "start_time": "2020-10-05T19:57:27.317636Z"
+     "end_time": "2020-10-06T16:31:02.016005Z",
+     "start_time": "2020-10-06T16:31:01.999646Z"
     }
    },
    "outputs": [
@@ -592,7 +594,7 @@
        "      <td>Marian Houk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>@calcalist</td>\n",
        "      <td>NaN</td>\n",
@@ -604,7 +606,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>@debkafile</td>\n",
        "      <td>NaN</td>\n",
@@ -616,7 +618,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>@debka_english</td>\n",
        "      <td>NaN</td>\n",
@@ -634,21 +636,21 @@
       "text/plain": [
        "   UniqueID          Source  RSS feed URLs (where available)            Type  \\\n",
        "0         1     @Marianhouk                              NaN  Twitter Handle   \n",
-       "1         2      @calcalist                              NaN  Twitter Handle   \n",
-       "2         3      @debkafile                              NaN  Twitter Handle   \n",
-       "2         3  @debka_english                              NaN  Twitter Handle   \n",
+       "2         2      @calcalist                              NaN  Twitter Handle   \n",
+       "4         3      @debkafile                              NaN  Twitter Handle   \n",
+       "5         3  @debka_english                              NaN  Twitter Handle   \n",
        "\n",
        "                               Tags Associated Twitter Handle  \\\n",
        "0               Twitter Journalists                       NaN   \n",
-       "1          Israeli|Hebrew|Financial                       NaN   \n",
-       "2  Israeli|English|Hawkish|Security                       NaN   \n",
-       "2  Israeli|English|Hawkish|Security                       NaN   \n",
+       "2          Israeli|Hebrew|Financial                       NaN   \n",
+       "4  Israeli|English|Hawkish|Security                       NaN   \n",
+       "5  Israeli|English|Hawkish|Security                       NaN   \n",
        "\n",
        "  Associated Publisher                  Name Text aliases  \n",
        "0                  NaN           Marian Houk  Marian Houk  \n",
-       "1                  NaN             Calcalist          NaN  \n",
-       "2                  NaN  Debka File - English          NaN  \n",
-       "2                  NaN  Debka File - English          NaN  "
+       "2                  NaN             Calcalist          NaN  \n",
+       "4                  NaN  Debka File - English          NaN  \n",
+       "5                  NaN  Debka File - English          NaN  "
       ]
      },
      "execution_count": 6,
@@ -665,8 +667,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.344279Z",
-     "start_time": "2020-10-05T19:57:27.333711Z"
+     "end_time": "2020-10-06T16:31:02.028827Z",
+     "start_time": "2020-10-06T16:31:02.017931Z"
     },
     "scrolled": true
    },
@@ -696,7 +698,7 @@
       "Associated Publisher                                    NaN\n",
       "Name                                              Calcalist\n",
       "Text aliases                                            NaN\n",
-      "Name: 1, dtype: object\n",
+      "Name: 2, dtype: object\n",
       "l3\n",
       "UniqueID                                                          3\n",
       "Source                                                   @debkafile\n",
@@ -707,7 +709,7 @@
       "Associated Publisher                                            NaN\n",
       "Name                                           Debka File - English\n",
       "Text aliases                                                    NaN\n",
-      "Name: 2, dtype: object\n",
+      "Name: 4, dtype: object\n",
       "l4\n",
       "UniqueID                                                          3\n",
       "Source                                               @debka_english\n",
@@ -718,7 +720,7 @@
       "Associated Publisher                                            NaN\n",
       "Name                                           Debka File - English\n",
       "Text aliases                                                    NaN\n",
-      "Name: 2, dtype: object\n"
+      "Name: 5, dtype: object\n"
      ]
     }
    ],
@@ -739,8 +741,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:57:27.359231Z",
-     "start_time": "2020-10-05T19:57:27.348684Z"
+     "end_time": "2020-10-06T16:31:02.045638Z",
+     "start_time": "2020-10-06T16:31:02.034063Z"
     }
    },
    "outputs": [],
