--- a/scope_parser/validation.ipynb
+++ b/scope_parser/validation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.542877Z",
-     "start_time": "2020-10-05T19:36:14.002534Z"
+     "end_time": "2020-10-07T20:03:53.466491Z",
+     "start_time": "2020-10-07T20:03:53.463213Z"
     }
    },
    "outputs": [],
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.549976Z",
-     "start_time": "2020-10-05T19:36:14.545490Z"
+     "end_time": "2020-10-07T20:03:54.383070Z",
+     "start_time": "2020-10-07T20:03:54.379393Z"
     }
    },
    "outputs": [],
@@ -33,43 +33,18 @@
     "        return True\n",
     "    except(Exception):\n",
     "        print(\"Input file is not csv or doesn't exist such csv\")\n",
+    "        return False\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.568034Z",
-     "start_time": "2020-10-05T19:36:14.553142Z"
+     "end_time": "2020-10-07T20:03:55.739915Z",
+     "start_time": "2020-10-07T20:03:55.732107Z"
     }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "is_csv(\"test_demo.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:52.856792Z",
-     "start_time": "2020-10-05T19:36:52.852619Z"
-    },
-    "scrolled": true
    },
    "outputs": [
     {
@@ -78,10 +53,20 @@
      "text": [
       "Input file is not csv or doesn't exist such csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_csv(\"not_exissv\")"
+    "is_csv(\"Qwer\")"
    ]
   },
   {
@@ -89,8 +74,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.580011Z",
-     "start_time": "2020-10-05T19:36:14.577685Z"
+     "end_time": "2020-10-07T17:49:01.728503Z",
+     "start_time": "2020-10-07T17:49:01.726267Z"
     }
    },
    "outputs": [],
@@ -103,8 +88,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.601418Z",
-     "start_time": "2020-10-05T19:36:14.582105Z"
+     "end_time": "2020-10-07T17:49:01.751635Z",
+     "start_time": "2020-10-07T17:49:01.730839Z"
     },
     "scrolled": false
    },
@@ -185,23 +170,27 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.610439Z",
-     "start_time": "2020-10-05T19:36:14.604226Z"
+     "end_time": "2020-10-07T17:49:01.768493Z",
+     "start_time": "2020-10-07T17:49:01.754138Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Int64Index([4], dtype='int64')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Int64Index([4], dtype='int64')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# find every rows that all Associated Twitter Handle is incorrect and print the row number\n",
     "def check_ATH():\n",
-    "    print(df.loc[~(df[\"Associated Twitter Handle\"].isnull() | df[\"Associated Twitter Handle\"].str.startswith('@'))].index)\n",
+    "    return(df.loc[~(df[\"Associated Twitter Handle\"].isnull() | df[\"Associated Twitter Handle\"].str.startswith('@'))].index)\n",
+    "\n",
     "\n",
     "check_ATH()\n",
     "    "
@@ -212,8 +201,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.629579Z",
-     "start_time": "2020-10-05T19:36:14.615317Z"
+     "end_time": "2020-10-07T17:49:01.790073Z",
+     "start_time": "2020-10-07T17:49:01.774203Z"
     },
     "scrolled": true
    },
@@ -305,23 +294,27 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.640291Z",
-     "start_time": "2020-10-05T19:36:14.633748Z"
+     "end_time": "2020-10-07T17:49:01.805470Z",
+     "start_time": "2020-10-07T17:49:01.794009Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Int64Index([5, 6], dtype='int64')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Int64Index([5, 6], dtype='int64')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# find every rows that Type is not \"News Source\" or \"Twitter Handle\" and print its row number\n",
     "def check_Type():\n",
-    "    print(df.loc[~((df[\"Type\"] == \"Twitter Handle\") | (df[\"Type\"] == \"News Source\"))].index)\n",
+    "    return(df.loc[~((df[\"Type\"] == \"Twitter Handle\") | (df[\"Type\"] == \"News Source\"))].index)\n",
+    "\n",
     "\n",
     "check_Type()\n",
     "    "
@@ -332,8 +325,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.656947Z",
-     "start_time": "2020-10-05T19:36:14.643366Z"
+     "end_time": "2020-10-07T17:49:01.819890Z",
+     "start_time": "2020-10-07T17:49:01.808058Z"
     },
     "scrolled": true
    },
@@ -425,8 +418,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.666382Z",
-     "start_time": "2020-10-05T19:36:14.658906Z"
+     "end_time": "2020-10-07T17:49:01.829164Z",
+     "start_time": "2020-10-07T17:49:01.822474Z"
     }
    },
    "outputs": [
@@ -448,28 +441,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-05T19:36:14.673622Z",
-     "start_time": "2020-10-05T19:36:14.668886Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(u'תל אביב, ישראל')\n"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
