--- a/scope_parser/jupyter/validate.ipynb
+++ b/scope_parser/jupyter/validate.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.071463Z",
-     "start_time": "2020-10-14T19:49:46.271657Z"
+     "end_time": "2020-11-16T16:49:07.378613Z",
+     "start_time": "2020-11-16T16:49:06.865525Z"
     }
    },
    "outputs": [],
@@ -16,7 +16,7 @@
     "import urllib.request\n",
     "import sys\n",
     "import chardet    \n",
-    "\n",
+    "import validators\n",
     "import scope_parser as sp\n"
    ]
   },
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.077158Z",
-     "start_time": "2020-10-14T19:49:47.073268Z"
+     "end_time": "2020-11-16T16:49:07.385275Z",
+     "start_time": "2020-11-16T16:49:07.381144Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.082329Z",
-     "start_time": "2020-10-14T19:49:47.079219Z"
+     "end_time": "2020-11-16T16:49:07.392783Z",
+     "start_time": "2020-11-16T16:49:07.388648Z"
     }
    },
    "outputs": [],
@@ -76,30 +76,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.087315Z",
-     "start_time": "2020-10-14T19:49:47.084393Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def check_ATH(df):\n",
-    "    \"\"\"\n",
-    "    find every rows that all Associated Twitter Handle\n",
-    "    is incorrect and print the row number\n",
-    "    :param df: a dataframe\n",
-    "    :rtype: data frame\n",
-    "    \"\"\"\n",
-    "    return(df.loc[~(df[\"Associated Twitter Handle\"].isnull() | df[\"Associated Twitter Handle\"].str.startswith('@'))])  # nopep8\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.092738Z",
-     "start_time": "2020-10-14T19:49:47.089346Z"
+     "end_time": "2020-11-16T16:49:07.402210Z",
+     "start_time": "2020-11-16T16:49:07.399106Z"
     }
    },
    "outputs": [],
@@ -110,23 +88,20 @@
     "    :param url: A URL\n",
     "    :rtype: bool\n",
     "    \"\"\"\n",
-    "    request = urllib.request.Request(url)\n",
-    "    request.get_method = lambda: 'HEAD'\n",
-    "\n",
-    "    try:\n",
-    "        urllib.request.urlopen(request)\n",
+    "    if validators.url(url) == True:\n",
     "        return True\n",
-    "    except(Exception):\n",
-    "        return False\n"
+    "    else:\n",
+    "        return False\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.098103Z",
-     "start_time": "2020-10-14T19:49:47.094666Z"
+     "end_time": "2020-11-16T16:49:07.408327Z",
+     "start_time": "2020-11-16T16:49:07.403957Z"
     },
     "scrolled": false
    },
@@ -142,18 +117,18 @@
     "    domain = df.loc[df[\"Type\"] == \"News Source\"].copy(deep=True) \n",
     "    result = domain[\"Source\"].apply(url_is_alive)\n",
     "    domain.loc[:,'domain_valid'] = result\n",
-    "    domain = domain.loc[domain[\"domain_valid\"] == False]\n",
+    "    domain = domain.loc[domain[\"domain_valid\"] == False]  # nopep8\n",
     "    del domain['domain_valid']\n",
-    "    return domain\n"
+    "    return domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.102519Z",
-     "start_time": "2020-10-14T19:49:47.099518Z"
+     "end_time": "2020-11-16T16:49:07.415290Z",
+     "start_time": "2020-11-16T16:49:07.411574Z"
     }
    },
    "outputs": [],
@@ -170,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.107027Z",
-     "start_time": "2020-10-14T19:49:47.104041Z"
+     "end_time": "2020-11-16T16:49:07.420593Z",
+     "start_time": "2020-11-16T16:49:07.417073Z"
     }
    },
    "outputs": [],
    "source": [
-    "def check_Type(df):\n",
+    "def check_Type(df):  # silence pyflakes\n",
     "    \"\"\"\n",
     "    find every rows that Type is not \"News Source\" or \"Twitter Handle\" \n",
     "    and return invalid rows as a new dataframe.\n",
@@ -192,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.113451Z",
-     "start_time": "2020-10-14T19:49:47.110472Z"
+     "end_time": "2020-11-16T16:49:07.426076Z",
+     "start_time": "2020-11-16T16:49:07.422543Z"
     }
    },
    "outputs": [],
@@ -215,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.119538Z",
-     "start_time": "2020-10-14T19:49:47.115905Z"
+     "end_time": "2020-11-16T16:49:07.433490Z",
+     "start_time": "2020-11-16T16:49:07.430035Z"
     }
    },
    "outputs": [],
@@ -245,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.129921Z",
-     "start_time": "2020-10-14T19:49:47.121214Z"
+     "end_time": "2020-11-16T16:49:07.446151Z",
+     "start_time": "2020-11-16T16:49:07.436444Z"
     },
     "scrolled": true
    },
@@ -326,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-14T19:49:47.894337Z",
-     "start_time": "2020-10-14T19:49:47.131240Z"
+     "end_time": "2020-11-16T16:49:07.507456Z",
+     "start_time": "2020-11-16T16:49:07.447785Z"
     },
     "scrolled": true
    },
@@ -341,15 +316,29 @@
      "text": [
       "It is valid csv file\n",
       "check Type\n",
-      "There are 2 lines with Type errors\n",
+      "There are 3 lines with Type errors\n",
       "check Url\n",
-      "There are 1 lines with invaild Url errors\n",
+      "There are 34 lines with invaild Url errors\n",
       "check Associate Twitter Handle\n",
-      "There are 1 lines with incorrect Associate Twitter Handle errors\n",
+      "There are 0 lines with incorrect Associate Twitter Handle errors\n",
       "check Twitter Handle\n",
-      "There are 1 lines with incorrect Twitter Handle errors\n",
+      "There are 2 lines with incorrect Twitter Handle errors\n",
       "csv exists some errors, please fix it\n",
       "generate error.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:7123: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  sort=sort,\n"
      ]
     }
    ],
@@ -357,7 +346,7 @@
     "if __name__ == '__main__':\n",
     "    \n",
     "    #inFile = sys.argv[1]\n",
-    "    validation(\"test_error_demo.csv\")\n",
+    "    validation(\"input_scope_final.csv\")\n",
     "\n"
    ]
   }
