added new scripts for stack-area-graph and documentation
added scripts and documentation on how to generate a stacked area graph from output.json and interest output.json

--- a/post-processor-to-csv/post-processor-to-csv.ipynb
+++ b/post-processor-to-csv/post-processor-to-csv.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ijson\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from shutil import copyfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -20,32 +21,338 @@
      "output_type": "stream",
      "text": [
       "Column id,url or alias text,referring record id,number of referrals,type,associated publisher,tags,name/title,language,authors,date of publication,plain text,image reference,anchor text,\n",
+      "Sent e93fd1c0-8664-5863-890a-8eb0caac2760\n",
+      "Sent 0f8ed509-4c91-5f4b-a4d0-e14ad00e1972\n",
+      "Sent 9aeb93a6-b1b1-5692-89d6-9e309296d704\n",
+      "Sent e37933b7-7587-5bce-ba09-1716711e3035\n",
+      "Sent e5afe261-4de0-503c-86d6-f5e71f49f031\n",
+      "Sent b615442b-10f4-5a29-9353-274f3c6f5243\n",
+      "Sent 3661c76b-2f69-5bb2-9d55-b4abe98cfc08\n",
       "Sent e7e87778-ba90-5bcd-9de5-c2e1281e9486\n",
       "Sent 0634a0d0-4582-552d-8ae5-8217cb341ff8\n",
+      "Sent 1a71f61c-8323-56f8-93b1-8f90135617d1\n",
+      "Sent 75d3db48-c748-5be4-bf5b-c13db430c0f2\n",
+      "Sent fb89429b-f929-5e65-af9a-1ef0d8a16c68\n",
+      "Sent b6f19a93-ae89-5564-9246-6b9428bfffb1\n",
+      "Sent 3db8013f-f577-5293-8b1e-49d90e674ba6\n",
+      "Sent aacabd64-700c-55a0-97f9-c853542b6754\n",
+      "Sent eac53488-20c0-50cf-90e6-7a71924c9f7b\n",
+      "Sent 1fa4a78d-25d9-5ccf-8566-031aafcf19a2\n",
+      "Sent 75996454-a7ab-5d0e-ab9e-db0075f69ae0\n",
+      "Sent 885f8012-fec0-5f4e-9b1f-c58ceb4bd882\n",
+      "Sent 79388ac9-3256-5641-80e7-260ecd98a079\n",
+      "Sent 5a61a66f-4500-5710-a817-074f355e6506\n",
+      "Sent 47551a2c-236f-5666-a611-a93589ead1fd\n",
+      "Sent 0ade447f-dea0-5ad7-a2d0-54c7d0b758fe\n",
+      "Sent f05aa62b-4246-5ee1-a20e-8ce6d407de78\n",
+      "Sent a34adb07-6c2f-52a3-9955-3771371e3524\n",
       "Sent c8269cb2-2000-5e1d-b614-5d552cb0bab1\n",
       "Sent 2e1bb938-0631-586a-8d35-cbdc6bc76c82\n",
+      "Sent dc7c088f-5715-543f-82e8-5ca32e2e974d\n",
+      "Sent 95eb48da-115d-51a0-b6a5-93ca8b9999a7\n",
+      "Sent b12569bb-7110-5e57-b6c8-8356eb3ee572\n",
+      "Sent a41238c0-06f5-56cc-ab69-a1a03d9beb39\n",
+      "Sent d2746317-d5d9-5c85-8725-f9bec56352fd\n",
+      "Sent a5d52216-264d-51ce-a99d-c0468af05208\n",
+      "Sent 9b8fb612-57bd-595c-bd3f-7170e23113e4\n",
       "Sent 10ef8870-5105-59f0-960b-aca25b9380f8\n",
+      "Sent be9759c5-9cf3-554c-a101-b84426653dd0\n",
+      "Sent fbcfa411-eb27-523f-ada0-8bc94325d594\n",
+      "Sent 239d7251-e072-5860-b41a-3eb239157152\n",
+      "Sent f63c6b0e-eb3c-5c72-889e-bd8fa5367586\n",
+      "Sent aa608644-f6a8-54ee-8b18-0d3d96ce4b83\n",
+      "Sent 19c502f3-dd1a-58e1-b8f2-a3bbd3597553\n",
+      "Sent 6d9a8b67-4f60-54c7-9b28-a1f210ff052f\n",
+      "Sent 4dba4d96-20ca-5090-b79d-11cdcdfcf7dd\n",
       "Sent 6303c567-b9a1-53df-94ce-d3ea99ae2b31\n",
+      "Sent f5fcfab6-aaef-5b5a-bb72-de62273f4c9b\n",
       "Sent 4e253c71-cb16-5bff-9921-63888b6ed6e2\n",
+      "Sent ca50afd0-1e6b-58b1-bcd0-cb669764bd01\n",
+      "Sent baf4c0e2-5ffd-5533-90e3-d5d22e0ea154\n",
+      "Sent 8761ed0f-ccae-5b95-81cd-70deb449aeeb\n",
+      "Sent 6c699ff9-3ec7-5925-9552-f98090ee2619\n",
+      "Sent 857db717-0bf8-5fb9-9bc2-adb073a0bd4c\n",
       "Sent e23a2832-d0ea-58bb-bf7b-4c83f1dfabfd\n",
+      "Sent 9534faa5-2c26-55bd-a20b-5801af079866\n",
+      "Sent e3101450-97cd-5090-8b3b-5baaed2840cc\n",
+      "Sent fed83b0a-8a2f-5ab0-be56-0614d352bf1b\n",
+      "Sent afd34292-6881-5dfd-8be9-65203b98633d\n",
       "Sent 86f179f3-bc6c-52da-a096-e9a5dfe0d4af\n",
       "Sent 152f6c49-fe3e-5897-8560-ac98d667314f\n",
+      "Sent 0ae36547-528b-53cf-8df5-57bb82f96302\n",
+      "Sent 2d6a4fed-a2a3-560b-b142-e09e3f4e6390\n",
       "Sent 32e127d2-9651-57bd-8477-61faadda20e5\n",
       "Sent 4041a3fc-5e79-563b-985f-952ae0257f9d\n",
+      "Sent e5e01ec7-6132-57d8-abf2-c6e51607df8f\n",
       "Sent 65c906a9-67d2-5161-acd8-ac4455743a33\n",
+      "Sent df0e829b-af59-5bee-843e-63e0694991d3\n",
       "Sent 11a496aa-8d87-5c2b-bc8c-66e54b6de7e3\n",
+      "Sent 1ce109ee-9075-51c6-92d9-8b874885a42e\n",
+      "Sent 456399b5-8452-5589-8ac3-66e680036897\n",
       "Sent e27e7998-66e7-5dc9-99ad-22eb039f1bac\n",
+      "Sent fac17eb6-2597-51ce-96e5-f6b4835ec345\n",
+      "Sent 4a7edb9d-b174-5348-8c73-38189ea1a547\n",
+      "Sent ba5783e9-a23c-5048-a649-db15d152dc7d\n",
+      "Sent f9ead838-65bb-5901-8dd9-9ac09151f9eb\n",
       "Sent 5e32d1b4-078a-5a83-9319-bd9126401e87\n",
       "Sent b0c76c56-4e2a-5996-a2d6-5c554a1a17ba\n",
       "Sent 2497342e-c6da-5f9f-81e7-ac68a0773385\n",
+      "Sent 354bf7fc-48c2-5f67-9ae8-1e0415d6c846\n",
       "Sent e795e443-febc-50d0-a5d9-c0db3957474d\n",
       "Sent 39676ac5-4db8-5ec7-9ce2-371726718288\n",
-      "DONE! check csvOutput/output_24-10-2021.csv\n"
+      "Sent 6c3022d3-cafe-57c3-8b33-7d5e72f9f639\n",
+      "Sent c6769341-14f9-5157-8066-96611009fda9\n",
+      "Sent f924793f-f412-5b63-8c45-4b6c339620df\n",
+      "Sent c8285688-a1ee-5758-b342-c7d86bd1ae32\n",
+      "Sent d2cac6af-17e8-55b3-98a7-32922ce8deb0\n",
+      "Sent 09162851-698c-53b6-bc2c-d4207fcaff0c\n",
+      "Sent d0783153-d1bc-5d54-ba07-b734f0b92e7b\n",
+      "Sent cae3d144-afb6-5d2d-afdb-05ee87ab17c6\n",
+      "Sent 14347d21-f802-5d8d-a079-73f5351d161a\n",
+      "Sent c5da0297-fac9-563e-81de-38e6be97e2ad\n",
+      "Sent 65b58197-7a04-510c-8bf8-360b49301af8\n",
+      "Sent 3bbcff3f-786b-5b46-ae33-a99bda63b4d8\n",
+      "Sent 29c7582e-2841-5dad-9266-210b1f4974e8\n",
+      "Sent 296ed130-5270-5553-8361-35fddaf7d80e\n",
+      "Sent a57543c1-b3d0-528c-a875-a11da28a83c2\n",
+      "Sent cbcb0cb5-3664-509c-87f1-d6fc1cd7bc15\n",
+      "Sent 6f4fc934-8f3b-5895-b156-3e63f0c5dd9c\n",
+      "Sent 6233c206-53a9-5539-b23a-2a2f2f1a39b4\n",
+      "Sent 93513679-319f-5a42-966f-593a9a46601f\n",
+      "Sent 93aaad4f-9262-50f1-b14c-20cae4cbb09d\n",
+      "Sent 20df3f8b-5a1d-5709-a2a6-08be46baa1de\n",
+      "Sent 18621202-15e4-5cfd-b821-9be0301fc5ca\n",
+      "Sent 53262cf6-b1b6-51c7-9255-ff9d00dbe4a2\n",
+      "Sent 65b3cff4-7aa3-5324-a61e-ba4300ff2cfb\n",
+      "Sent 784dce94-71c7-5c32-89b0-6cffce93d637\n",
+      "Sent 2a586c60-60e4-58ec-b7e1-48295aa742ec\n",
+      "Sent 08c5d33a-2677-5cd9-b105-46902e3eef0f\n",
+      "Sent f60ecc03-2a9c-533a-8492-746fcaa142be\n",
+      "Sent fb745543-2466-5c4d-8c98-ec3df405a29d\n",
+      "Sent 8404b133-f1a1-5eaf-b86f-d556c954e7aa\n",
+      "Sent 88bec905-6a97-530c-8d04-45fa586bdaa1\n",
+      "Sent 4a7f7c1c-481d-5f41-82a2-ae3bc83c4a39\n",
+      "Sent da092af1-2933-56e7-8b45-957526f88ca9\n",
+      "Sent 4580d089-7fe2-5623-80bd-129e19d1866d\n",
+      "Sent 80b86637-4343-50fc-b17d-dd0656af8331\n",
+      "Sent c054cb21-3fc9-513b-9eba-77e79a49ea0a\n",
+      "Sent 229940df-fc20-5771-803c-5d8341d6d3c6\n",
+      "Sent 5a3cd7de-c2f6-5b8f-8f94-4e9ca4ae23a4\n",
+      "Sent 19f75630-34be-5e3c-887b-7dd055e57e20\n",
+      "Sent c0a78f5d-f942-522a-9589-16df013ff62a\n",
+      "Sent ddd177f9-1e91-5002-855f-d48b8f819c8e\n",
+      "Sent 94e634f3-2c70-5bfe-8934-9eae7b35d10c\n",
+      "Sent 6b6515a0-704e-5ebc-b907-e3bbe44771e7\n",
+      "Sent ffaa3569-0bbb-59a4-bc27-0f192f376899\n",
+      "Sent 52410d4a-79fa-58d0-9a94-063aa2c82bf9\n",
+      "Sent df964c5c-c255-5466-b098-b542f4615da5\n",
+      "Sent 1ba4b95a-e1f9-5d73-a5e3-c2f4b5519e57\n",
+      "Sent 91cbede2-be13-5c7a-9f4c-0d54b8a8099a\n",
+      "Sent a4693767-fabe-5444-ba2f-e24f48d6ce09\n",
+      "Sent 134d45cd-97b9-5e9c-bcab-707c941cd164\n",
+      "Sent bdba87eb-d4b8-5681-8270-f5fe6d990f90\n",
+      "Sent 6891d73f-4c4c-5e8e-88c7-b33e2f346d9e\n",
+      "Sent 95d64fd2-adbe-5bae-92ba-166c219bdf48\n",
+      "Sent 46332696-4c62-52c2-8872-b8649d1dd203\n",
+      "Sent c943c18c-11cf-5bd0-8349-8546d54284bf\n",
+      "Sent 4ddee2a2-a3f3-590c-b8a5-43cfb7d481be\n",
+      "Sent 404fedb5-0ad8-5210-855e-d47733425e96\n",
+      "Sent 53ad0f96-fd9e-5d08-8e0e-6c63747007dd\n",
+      "Sent d0b7fc1b-2c0c-5c10-ac3f-b237e7a6f60b\n",
+      "Sent e13249a0-701b-515d-8e6f-14a72a72a9fe\n",
+      "Sent e49d856b-2393-5b84-ae6b-f3f15c649c6c\n",
+      "Sent 28eeaa6b-61d9-5895-a5b1-23116199e8fa\n",
+      "Sent bedf7059-0fcf-558b-919d-36a7784199a3\n",
+      "Sent cf610418-38ce-59ba-8c42-13a1bb44f542\n",
+      "Sent df4627e2-4b3d-5ab7-ae1e-5947c0782f85\n",
+      "Sent a17cca75-61c3-567c-b6d5-b3987fd7ff7a\n",
+      "Sent 40977f43-540a-5152-887b-e2de9602a4a1\n",
+      "Sent 15fc9494-8696-54f7-91ef-a2b193b7e3e6\n",
+      "Sent b276d49d-a20b-5c1c-bc10-59ecdb87ed18\n",
+      "Sent 3977dc6f-e7ba-5be7-beef-0c3b43dcdb64\n",
+      "Sent adf60d78-e5f8-5039-9e2f-edd1c8a1993e\n",
+      "Sent 57ab1077-e92d-58e6-9ea4-7e39b6c7f746\n",
+      "Sent 45a1d31b-adac-55f4-b101-dd23dd225a0e\n",
+      "Sent 9596b076-66dc-5924-91ba-2e9e59189894\n",
+      "Sent e5ad5f67-8938-5b69-b4e9-c4ebe33dcbb6\n",
+      "Sent 2e36bd01-8f29-51f8-a53e-86da3b0d51af\n",
+      "Sent 2e248930-ee2e-5378-9e5e-760d3b6932ea\n",
+      "Sent 87933143-92df-5eb7-8eff-91b7b5ee199e\n",
+      "Sent ed834c89-e18a-572a-a831-214982a5f31c\n",
+      "Sent 9f7fd5f8-a2ca-55db-a4ab-7bd3a626f538\n",
+      "Sent f250db9a-d279-57ea-94dd-aeac42bde0c0\n",
+      "Sent 0af01e9f-9ab3-5777-b34d-6646ac64a392\n",
+      "Sent 984e2aac-1b6d-5551-a774-00ecb65438c7\n",
+      "Sent 3f68ef5c-4637-5eca-b61c-64479e189e7d\n",
+      "Sent 07b6e5cc-35a9-548c-9a87-8a68050dc2f4\n",
+      "Sent 2b7350d9-2427-5515-8667-534cbcca7cef\n",
+      "Sent 8291bdac-50bb-57bb-ab95-2dce99c4e4d7\n",
+      "Sent 77d972eb-5522-55ab-99e5-7b5b4ca1ca17\n",
+      "Sent a5c09e7f-32a9-5a5c-b03c-026a51b9ab5f\n",
+      "Sent c0fd87c1-270e-576d-8a3b-2dddef932d7f\n",
+      "Sent cbf2a3eb-a696-5110-92f7-8637dd074687\n",
+      "Sent e1344823-fd08-52e5-829d-9e9a3e433be1\n",
+      "Sent 141a1a8b-ac4a-50e7-9f3b-57a58610a491\n",
+      "Sent e84b95ce-c943-591b-ab52-e867c827cad5\n",
+      "Sent 6dc09dc6-bf89-5a85-be8d-8d5f2bbaa52c\n",
+      "Sent e35e3f3d-ad73-5559-a52a-305044ce012a\n",
+      "Sent 0518ee3c-2ab4-5523-a82d-8ee4262afb41\n",
+      "Sent 670f7888-6b4d-5e25-ab6b-628a79378b5b\n",
+      "Sent 2573aa87-58d0-5322-a4b5-a7de714aed31\n",
+      "Sent b23711ee-9680-52d5-a0b0-65652b7b6b47\n",
+      "Sent f24fd3b5-a846-5713-8854-de2eee0dc075\n",
+      "Sent 8325f1ce-6586-52cb-90cf-0c04ff83c023\n",
+      "Sent 649b1a58-816f-5c16-a920-68696b64575e\n",
+      "Sent 067128ec-7b32-58d7-a74c-15d83e251c78\n",
+      "Sent 94087552-a719-5320-b8ab-a2b0486763da\n",
+      "Sent 5af27b4d-9f04-5b38-9313-298a117368f6\n",
+      "Sent 91f42ba2-a5a0-56c6-b739-0a32f8c56480\n",
+      "Sent b9240dff-208e-530a-8fc7-55159735577f\n",
+      "Sent 1a385d70-d857-5cd6-afd9-3a7e66f7dfb0\n",
+      "Sent bac4c5ae-bef3-5086-9803-2d42110fe6a5\n",
+      "Sent e66572f1-506e-5e41-8b70-d763acd3d7d4\n",
+      "Sent 0f4e049b-cc92-5ab6-ac5c-7a47cb113268\n",
+      "Sent 9e91b1a0-e6d4-5295-8a30-ba2e19a0f63e\n",
+      "Sent 6c836852-f97d-5567-b1b6-65d6e82aaea1\n",
+      "Sent 6af979da-17f1-5bd5-bbd4-bfb2e7bc7357\n",
+      "Sent 0376777c-e317-57cf-bf41-41e33c3f6844\n",
+      "Sent 718b664b-fb1c-5b0b-b300-860c334ff17b\n",
+      "Sent be6f6bfb-a959-57a7-bc54-07e43821fe3a\n",
+      "Sent f5b581e2-141a-5cec-b0e1-663dd4749f42\n",
+      "Sent 14d602c2-a4b4-5ed9-a24e-ced8813f7ebd\n",
+      "Sent ca822ce1-e556-5655-a37c-5b99bf8daed6\n",
+      "Sent e6567990-853e-5089-b248-46ea35edca33\n",
+      "Sent 03fdcea9-c1ea-5a0c-879e-33d7325c93ac\n",
+      "Sent d63f26b8-5ee9-5fa0-a77b-a3c51dfcaf00\n",
+      "Sent fe6a98d4-3bbd-5e99-9896-9af89d3551c1\n",
+      "Sent d189dd4e-dcba-5692-b003-7c36ac92db12\n",
+      "Sent ff103ade-ff93-5dd0-83bb-b92f8a746427\n",
+      "Sent bb53eb1b-4adc-55ea-a868-225f005a95e1\n",
+      "Sent d39fd734-3a2e-58b4-b95e-7f83f8ad31a5\n",
+      "Sent 9e63b40d-8dbb-544a-a0b6-391ab4cdd0cf\n",
+      "Sent 43958c2d-b0e5-57b1-9f6c-1f469cc0860c\n",
+      "Sent c40991d4-8e6a-5764-98dc-0811d50c36ac\n",
+      "Sent fc8dec22-61d7-5fa9-9ac2-1ce70818ee03\n",
+      "Sent 21aa9602-92b0-5dd0-915d-b5c8d312c864\n",
+      "Sent 5cbeb531-6562-5b08-b4bd-3d84c8d6cf84\n",
+      "Sent 3acfb206-488a-5536-8528-a117de7797f9\n",
+      "Sent ed5c162a-81e0-5d74-b66e-e7bf1b351746\n",
+      "Sent 9b1b300e-3b50-5bd3-9924-736b48e746dd\n",
+      "Sent b71ba641-9cfb-58c6-a05e-9540bb119360\n",
+      "Sent 161735a4-ce88-57e2-b440-a3fefdbbc7df\n",
+      "Sent 9fc86673-e09e-5efc-9bf9-b5b3f95a435b\n",
+      "Sent 52fc7fd2-74a9-564c-bf20-8a1d1ff42436\n",
+      "Sent 1734b8d6-0498-5144-8ccd-0d5ad1900e17\n",
+      "Sent d96c6cde-ef1e-58b7-b90a-ca45641c869b\n",
+      "Sent 69704513-0036-5990-9bb9-023eca73137f\n",
+      "Sent 49db923a-2c7f-5862-b285-266b8c15f56a\n",
+      "Sent ea198ff0-cad3-569b-b4f0-92e02c11bc5a\n",
+      "Sent 4fe951ae-3519-539e-897d-d727438ea827\n",
+      "Sent d0452897-e5be-5327-a867-55d4fa7c1e04\n",
+      "Sent fbf0950c-d745-54ae-957b-f641e4974dd3\n",
+      "Sent c0a41f3c-727a-58bd-8a9f-199efc55e562\n",
+      "Sent a124feb6-09c3-5a7f-bf3e-aee3d8a18128\n",
+      "Sent 560ab81f-9005-5b62-aaf7-096e2aec1004\n",
+      "Sent 28d3eed3-2d03-5b89-92ab-ea731f4286f9\n",
+      "Sent b9354671-d549-5831-a232-5f1da9b406a3\n",
+      "Sent a98673f5-e034-5d60-a60e-0446952fbfeb\n",
+      "Sent 0b1bf3f2-70e3-5929-aaad-c836a9555b98\n",
+      "Sent 5589aab5-f636-5613-aafd-7a83e51a2280\n",
+      "Sent b323076e-53d3-5c9f-9f9b-3ef4979c1927\n",
+      "Sent 39ae2ad2-def6-5990-aa54-8f640a082257\n",
+      "Sent 70c7e90d-4f36-592a-9655-e2f80e69c6fe\n",
+      "Sent dc6766ad-d2e4-5d99-bdf6-0cde1276ec12\n",
+      "Sent ae07e13b-994a-5975-8431-4cee8f98cd03\n",
+      "Sent d6f84b21-2c79-5ffb-aedc-c61e2a73205b\n",
+      "Sent 14bbc49c-0cf7-583e-ada2-be7d25f55d9e\n",
+      "Sent 5df04db8-7d02-5d4b-9579-44015975ff40\n",
+      "Sent 3486bc33-3791-56e2-9c98-c94b73886800\n",
+      "Sent dae04e0b-f074-5359-8e91-df940ac524b2\n",
+      "Sent 1de97769-bc41-5abb-9e90-e58ad5cc8772\n",
+      "Sent 1e0b582b-f138-5939-9eef-5e0e89901292\n",
+      "Sent cdb65587-4310-5050-b93e-bfec5493c437\n",
+      "Sent 7b11e5f4-ecf1-5062-b963-6b325dd0acc7\n",
+      "Sent 69616b26-2edb-5eb5-b3d9-f13e3b841091\n",
+      "Sent ba330121-a63a-5a26-a9ef-fb82c31efc26\n",
+      "Sent cdf3a847-b31a-595f-9241-b06263694b6a\n",
+      "Sent 8f229cd2-c230-5787-82ca-9bec4a4f777a\n",
+      "Sent 7bdc6fc3-fe56-555c-966d-587570e83e6c\n",
+      "Sent e9a0f144-a574-50da-9111-79723c1735a4\n",
+      "Sent dc7dc350-784d-58a2-aa1b-e521a5652aa9\n",
+      "Sent e46b4831-f9b9-55e3-bff3-f3898bc8ef63\n",
+      "Sent 13d139e6-b122-5c23-8b13-5fcc37ad4fbd\n",
+      "Sent 139eee64-ea29-52fa-85eb-9f8d23810995\n",
+      "Sent 9a40fd56-9f9d-506b-9eb6-f763212f39f6\n",
+      "Sent 2277fede-ae5e-5d11-8f95-87c97bddf8a6\n",
+      "Sent 389e9e24-c16f-578d-a39f-3d053e7c296e\n",
+      "Sent 2320e863-9575-5f57-a349-25ca1cdca462\n",
+      "Sent d7ffa9f1-accf-5a13-b10b-c66dfde02975\n",
+      "Sent edbcdd67-8a61-5c9f-945e-7ed6173b6e37\n",
+      "Sent 1532b963-a500-5607-b60b-0aaf601680c3\n",
+      "Sent a256564f-e9f3-52d6-911b-9a73b4b5e6e3\n",
+      "Sent ec741fda-57f0-558a-ab07-277b6ad0f653\n",
+      "Sent c45102f9-cba7-5456-81f4-cec9858519de\n",
+      "Sent 257aa6b4-2e85-503a-b612-d0904523978e\n",
+      "Sent 9ddb538d-785d-5bd5-8008-bf0098605660\n",
+      "Sent 2827b5c7-614e-5966-becd-9e73517f7f02\n",
+      "Sent 9fbbf91e-7a1c-500c-a625-48f0eea58cae\n",
+      "Sent 90581a37-da69-5ef9-a7d7-826dad8db1a4\n",
+      "Sent 07f69a99-25c2-5642-a3d3-708496022d13\n",
+      "Sent 7e36f291-1030-5fa8-bd0d-b22959da23df\n",
+      "Sent 37a8e008-562a-5166-a90f-a6f77fc3f841\n",
+      "Sent 1f9be24c-ab70-554c-8493-03201e663259\n",
+      "Sent 483c5cfa-0bd9-583b-a78d-a809f7767791\n",
+      "Sent 0e1827b6-c0a8-5c4f-87fb-fbc9fa519f6d\n",
+      "Sent c2d9aa45-bdb7-5de4-a442-7a642b7e5b78\n",
+      "Sent e5eed8b9-116f-55e9-b462-00dd16f329c0\n",
+      "Sent 8a1a4fa0-17b0-5950-8423-82879d645ba6\n",
+      "Sent 98c95f0d-3301-5781-b78e-16a1683aa541\n",
+      "Sent 6f6fe82a-fe28-5e30-9985-18b79987fa3e\n",
+      "Sent 83cd186f-1640-5c29-800f-091d484bcc79\n",
+      "Sent 7d0ac939-a8e1-58ef-8a9a-5acb73ea07fb\n",
+      "Sent 32c461fe-9a1d-5c39-86d1-2fb046197c33\n",
+      "Sent b8ad163e-ad4b-5cdc-9506-0a38527b2d9d\n",
+      "Sent 84041a50-79e2-5f5f-b134-28fa427e82ee\n",
+      "Sent f946e907-0f0a-51b3-a8ad-6418692845e2\n",
+      "Sent f560c8a8-4fc0-5815-9461-526bdef293eb\n",
+      "Sent 05e0393c-5506-58a5-9a54-76925aa772e0\n",
+      "Sent d798fff9-926c-5c5f-a057-a514010e21f7\n",
+      "Sent c498ed02-45bc-59f4-a443-4e7d4c80b372\n",
+      "Sent 89581da6-c3f2-509a-bb5f-e567b380bb72\n",
+      "Sent 0475fcdb-53bf-5589-8f2c-cddb4772e584\n",
+      "Sent 28041afd-bbd6-542f-a270-a65244153ad2\n",
+      "Sent 89dba2a2-c932-5a76-81f7-6f6631bb0574\n",
+      "Sent 224fe4d2-afe9-5c09-8c6f-4dbf53d4a7b0\n",
+      "Sent 553d0d41-afa4-5cf9-8b4e-abfc48f50e49\n",
+      "Sent 9988b526-c622-54b7-9f4a-90db1cb7807e\n",
+      "Sent 67ea54ed-41ac-5433-bfa7-14bd42ff3857\n",
+      "Sent 15f4dd83-091e-5d4b-9877-804dcc820019\n",
+      "Sent 944fbf58-ff59-507f-b156-b60ebb85fc8b\n",
+      "Sent a5192fd6-29d2-5f17-836f-8986fad6d149\n",
+      "Sent 232cbb91-d089-5cde-8dd7-a48dfc14aec8\n",
+      "Sent 7c661237-75c2-58c5-8449-fd31075c0a5e\n",
+      "Sent d164efde-b416-5a9a-88f9-2e2bf960d479\n",
+      "Sent 82b23ff3-4d52-5d76-8c86-97bccb17484d\n",
+      "Sent 2f3306a7-c18f-5691-a187-06b48fa0f6d3\n",
+      "Sent a7a0a575-ad7a-51f1-8381-b193b0a4124e\n",
+      "Sent 91166208-6a81-5f4f-8658-70b603115365\n",
+      "Sent fe175dc8-7dd5-5dd0-96be-24327dc2458c\n",
+      "Sent 77196c0d-37ff-547b-8636-824dc41e0b19\n",
+      "Sent 85a777ca-01c9-512c-963f-c9605c78ac71\n",
+      "Sent 927aef77-92e8-5c3a-ad4d-adaa265eeb35\n",
+      "Sent 0c49ab70-0511-5f76-b286-196d16c9c29e\n",
+      "Sent 37f4a046-19ec-5361-88ed-8e5b2743cc6b\n",
+      "Sent 154d6c63-e8e3-54eb-9554-f160517472e6\n",
+      "Sent 0a47d794-3b03-55d2-bb55-e844624df16c\n",
+      "Sent 920de085-cbc5-5fed-a4f1-b053f7c37e18\n",
+      "Sent 2ad7370e-7399-540d-bf2f-b60a61393851\n",
+      "Sent d3fee912-828d-5537-b734-bce22873bcaa\n",
+      "DONE! check csvOutput/output_27-11-2021.csv\n"
      ]
     }
    ],
    "source": [
-    "with open(\"jsonOutput/output.json\", \"r\") as output:\n",
+    "with open(\"../data/current/output.json\", \"r\") as output:\n",
     "    parser = ijson.parse(output)\n",
     "    current = \"\"\n",
     "    columns = \"\"\n",
@@ -99,6 +406,9 @@
     "                multi_columns = []\n",
     "                entry_id = \"\"\n",
     "        #print('prefix={}, event={}, value={}'.format(prefix, event, value))\n",
+    "\n",
+    "        #copy this csv output to stacked area graph for processing\n",
+    "        copyfile(output_file_name,'../stacked-area-graph/input_for_stacked_area_graph.csv')\n",
     "    print(\"DONE! check \"+output_file_name)"
    ]
   },
@@ -135,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
