--- a/visualization/stacked-area-graph/postprocessing_stacked_area_chart_new.ipynb
+++ b/visualization/stacked-area-graph/postprocessing_stacked_area_chart_new.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Note\n",
+    "This needs to be refactored to work with new csv processor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### This code draws a stacked area graph that shows how many times Palestine Chronicle, Times of Israel, and Jerusalem Post have been referred by the media/journalists in the input scope over the past three years (2018, 2019, 2020) based on an imaginary sample data file produced by the postprocessor."
    ]
   },
